# Face-detection-Raspberry-Pi-32-64-bits

MNN/: CMakeLists.txt  main.cpp
